--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,11 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  margin: 0 0 0 110px;
+  /*
+  if more then 3 obj use:
   margin: 0 0 0 920px;
+  */
 }
 
 .j-card-container{
@@ -42,5 +46,5 @@
 
 .j-content {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0;
 }
